# Interlace

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  package.json
Interlace-Remote/: Info.plist
Interlace-Remote/Interlace-Remote/: ContentView.swift  InterlaceAPI.swift  InterlaceStore.swift  Interlace_RemoteApp.swift  WatchRelayServer.swift
Interlace-Remote/Interlace-Remote.xcodeproj/: project.pbxproj
Interlace-Remote/Interlace-Remote.xcodeproj/xcshareddata/xcschemes/: Interlace-Remote.xcscheme  interlace-remote-watch Watch App.xcscheme
Interlace-Remote/Interlace-Remote/tabviews/: DownloadsView.swift  LibraryView.swift  LoginView.swift  PlayerView.swift  SettingsView.swift
Interlace-Remote/interlace-remote-watch Watch App/: ContentView.swift  LibraryView.swift  LoginView.swift  PlayView.swift  WatchInterlaceAPI.swift  WatchLibraryStore.swift  WatchTransport.swift  interlace_remote_watchApp.swift
backend/: app.py  aria2_client.py  config.py  doctor.py  kodi_client.py  pyproject.toml  requirements.txt  stream_relay.py  stream_resolver.py
backend/tests/: conftest.py  test_app.py  test_aria2_client.py  test_kodi_client.py  test_stream_relay.py  test_stream_resolver.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Downloads.tsx  Library.tsx  Player.tsx  Stream.tsx  api.ts  index.css
frontend/src/types/: api.ts
scripts/: install-display-fix.sh  install-ffmpeg-runtime.sh  kodi-display-heal.sh  kodi-wait-for-display.sh  sync.sh
(+1 files in other folders)
