[project]
name = "interlace-console"
version = "1.0.0"
description = "Self-hosted web console for aria2 + Kodi media box control"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "python-multipart",
    "psutil",
    "yt-dlp",
    "curl-cffi>=0.10,<0.15",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern syntax)
    "SIM", # simplify code
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
